--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
-<h3>Capstone project - Post Graduate Diploma in Machine Learning and Artificial Intelligence </h3>
+
+<body style="background-color:powderblue;">
+<h3 style="color:Blue;">Post Graduate Diploma in Machine Learning and Artificial Intelligence </h3>
 <h4>Sentiment Based Product Recommendation System</h4>
 <p><b>Problem Statement :</b><br>
     Ebuss, an e-commerce company, has captured a huge market share in many fields, and it sells the products in various categories such as household essentials, books, personal care products, medicines, cosmetic items, beauty products, electrical appliances, kitchen and dining products and health care products.With the advancement in technology, it is imperative for Ebuss to grow quickly in the e-commerce market to become a major leader in the market because it has to compete with the likes of Amazon, Flipkart, etc., which are already market leaders.A model has been built that will improve the recommendations given to the users given their past reviews and ratings by building a sentiment-based product recommendation system.
@@ -10,7 +12,7 @@
 
 </p>
 <form action="/" method = "POST">
-    <p>Name <input type = "text" name = "Name" /></p>
+    <p>Enter the User Name <input type = "text" name = "Name" /></p>
     <p><input type = "submit" value = "Submit" /></p>
 </form>
 
@@ -18,3 +20,4 @@
 {% if product_name_list %}
     <p>Your recommended list = </p> {{product_name_list}}
 {% endif %}
+
